# cloud-datastore-rs

./: Cargo.toml  README.md  build.rs
examples/: high_level.rs  store_and_load.rs
src/: auth_interceptor.rs  error.rs  lib.rs
src/google/: google.api.rs  google.r#type.rs
