[package]
name = "cloud-datastore-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
gcp_auth = "0.12.2"
http = "1.1.0"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.38.0", features = ["full"] }
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
tonic-build = { version = "0.12.0", features = ["prost"], optional = true }
tonic-types = "0.12.0"

[features]
protobuild = ["tonic-build"]


[[bin]]
name = "protobuild"
required-features = ["protobuild"]

[build-dependencies]

